--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2243,10 +2243,8 @@ input, select, textarea {
 /* Actions */
 
 	ul.actions {
-		display: -moz-flex;
-		display: -webkit-flex;
-		display: -ms-flex;
-		display: flex;
+
+		display: inline-block;
 		cursor: default;
 		list-style: none;
 		margin-left: -1em;
@@ -2445,8 +2443,7 @@ input, select, textarea {
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		background-color: transparent;
-		border-radius: 0.35em;
-		border: solid 3px #efefef;
+
 		color: #787878 !important;
 		cursor: pointer;
 		display: inline-block;
@@ -2455,7 +2452,7 @@ input, select, textarea {
 		height: calc(2.75em + 6px);
 		line-height: 2.75em;
 		min-width: 10em;
-		padding: 0 1.5em;
+		padding: 10px;
 		text-align: center;
 		text-decoration: none;
 		white-space: nowrap;
@@ -2465,15 +2462,6 @@ input, select, textarea {
 		input[type="reset"]:hover,
 		input[type="button"]:hover,
 		.button:hover {
-			border-color: #49bf9d;
-			color: #49bf9d !important;
-		}
-
-		input[type="submit"]:active,
-		input[type="reset"]:active,
-		input[type="button"]:active,
-		.button:active {
-			background-color: rgba(73, 191, 157, 0.1);
 			border-color: #49bf9d;
 			color: #49bf9d !important;
 		}
