--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2143,7 +2143,7 @@ input, select, textarea {
 			}
 
 			.image.avatar img {
-				border-radius: 100%;
+				/*border-radius: 100%;*/
 				width: 100%;
 			}
 
