--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2161,7 +2161,7 @@ input, select, textarea {
 
 	ul {
 		list-style: disc;
-		margin: 0 0 2em 0;
+		margin: 0 2em 0;
 		padding-left: 1em;
 	}
 
@@ -2368,30 +2368,33 @@ input, select, textarea {
 	}
 
 	table {
-		margin: 0 0 2em 0;
+		margin: 0 2em 0;
 		width: 100%;
 	}
 
 		table tbody tr {
-			border: solid 1px #efefef;
+			
 			border-left: 0;
 			border-right: 0;
 		}
 
-			table tbody tr:nth-child(2n + 1) {
+			/*table tbody tr:nth-child(2n + 1) {
 				background-color: #f7f7f7;
-			}
+			}*/
 
-		table td {
+		/*table td {
 			padding: 0.75em 0.75em;
-		}
+		}*/
 
 		table th {
 			color: #787878;
-			font-size: 0.9em;
 			font-weight: 400;
 			padding: 0 0.75em 0.75em 0.75em;
 			text-align: left;
+		}
+
+		table td {
+			padding: 0 0.75em 0.75em 0.75em;
 		}
 
 		table thead {
