--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2990,6 +2990,16 @@ input, select, textarea {
 		opacity: 1.0 !important;
 	}
 
+	.scroll-container a {
+		position: absolute;
+		margin-right:1em;
+		cursor: pointer;
+		font-size: 30px;
+		right:0;
+		margin-bottom: 1em;
+
+	  }
+
 /* XLarge */
 
 	@media screen and (max-width: 1800px) {
