--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3225,7 +3225,7 @@ input, select, textarea {
 				display: block;
 				margin-left: auto;
 				margin-right: auto;
-				width: 100px;
+				/*width: 100px;*/
 			}
 
 		/* Footer */
