--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2598,7 +2598,7 @@ input, select, textarea {
 		position: fixed;
 		text-align: right;
 		top: 0;
-		width: 35%;
+		width: 30%;
 	}
 
 		#header > * {
@@ -2675,11 +2675,11 @@ input, select, textarea {
 	}
 
 		#footer .copyright li {
-			border-left: solid 1px rgba(255, 255, 255, 0.25);
-			display: inline-block;
-			line-height: 1em;
-			margin-left: 0.75em;
-			padding-left: 0.75em;
+			/*border-left: solid 1px rgba(255, 255, 255, 0.25);*/
+			/*display: inline-block;*/
+			line-height: 2.25em;
+			margin-left: 0em;
+			padding-left: 0em;
 		}
 
 			#footer .copyright li:first-child {
@@ -2695,10 +2695,10 @@ input, select, textarea {
 /* Main */
 
 	#main {
-		margin-left: 35%;
-		max-width: 54em;
+		margin-left: 30%;
+		max-width: 61em;
 		padding: 8em 4em 4em 4em;
-		width: calc(100% - 35%);
+		width: calc(100% - 30%);
 	}
 
 		#main > section {
